Corrigindo o erro de português da ANTA aqui

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://paulinnleao.github.io/portifolio",
-  "name": "portifolio",
+  "homepage": "https://paulinnleao.github.io/portfolio",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
